--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "npm run start-js",
-    "start-js": "node src/index.js",
-    "start-ts": "tsc --project ./",
+    "start": "tsc --project ./ && node src/Main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +21,7 @@
   },
   "homepage": "https://github.com/duqian42707/coin#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "https-proxy-agent": "^5.0.0",
     "moment": "^2.29.1",
     "pako": "^2.0.3",
