--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "start": "tsc --project ./ && node src/Main.js",
+    "forever-start": "tsc --project ./ && forever -a -l coin.log start src/Main.js ",
+    "forever-stop": "forever stop src/Main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,8 +25,10 @@
   "dependencies": {
     "axios": "^0.21.1",
     "https-proxy-agent": "^5.0.0",
+    "log4js": "^6.3.0",
     "moment": "^2.29.1",
     "pako": "^2.0.3",
+    "redis": "^3.1.2",
     "ws": "^7.4.5"
   },
   "devDependencies": {
